--- a/index.html
+++ b/index.html
@@ -1,3 +1,87 @@
 <p>Hello 大家好</p>
 <p>我是zdbgr，这是我的个人博客。 </p>
-<p>很高兴你来到这里</p>
+<p>欢迎来到我的世界</p>
+
+<ul>
+  <li> <a href="ChatGPT网站
+免费、自用
+https://chat.wobcw.com/
+免费ChatGPT网站
+https://dev.yqcloud.top/
+免费ChatGPT网站
+带角色、谨慎填key
+https://gpt.xeasy.me/
+免费ChatGPT网站
+https://gpt.intercat.cn/
+ChatGPT
+带角色、谨慎填key
+https://ai.bo-e.com/
+ChatGPT中文镜像站
+支持角色预设
+https://chat.moyunav.com/
+ChatGPT中文镜像站
+支持角色预设
+http://newb.site/chatgpt
+FORCHANGE AI EDU
+模拟chatgpt
+https://chat.forchange.cn/
+AI EDU
+免费试用
+https://aigcfun.com/
+ChatGPT网站
+需注册
+http://chat.forwardminded.xyz/#/
+ChatGPT中文网
+内含App、百科、使用教程
+https://www.eiefun.com/chatgpt
+ChatGPT
+chatgpt & vercel
+https://www.chatsverse.xyz/
+ChatGPT App Scyu
+支持角色预设
+https://www.scyu.app/
+ChatGPT
+支持角色预设
+https://www.aitoolgpt.com/
+FastGPT
+模拟chatgpt
+https://fastgpt.app/
+Chat For AI
+支持角色预设
+https://chatforai.com/
+Chat For AI
+需要登录
+https://chat.zecoba.cn/
+ChatGPT
+本地、云端导入提示
+https://chat.theb.ai/
+ChatGPT
+支持保存会话
+https://chat.yqcloud.top/#/chat/1678716026709
+Code Helper
+帮助程序员写代码
+https://aicodehelper.com/
+Code Future
+整理了许多Chatgpt对话
+https://ai-toolbox.codefuture.top/
+...
+ChatGPT的垂直应用
+
+ChatPDF
+文档处理神器，提取pdf内容
+https://www.futuretools.io/tools/chatpdf
+BiliGPT
+一键提取音视频内容
+https://b.jimmylv.cn/
+ShowGPT
+GPT社区，分享有意思的对话
+https://showgpt.co/
+Code Converter
+转换不同框架的代码
+https://codeverter.vercel.app/
+
+
+加微信cjkhty获取最新免费网址列表，若想体验原汁原味的官方chatGPT，
+可购买个人独享ChatGPT账号，我们有低价优质的账号，绝对比其他地方狮子大开口良心得多
+"></a> </li>
+</ul>
